--- a/RxStudy/RxStudy/Features/Shop/Shop.storyboard
+++ b/RxStudy/RxStudy/Features/Shop/Shop.storyboard
@@ -20,29 +20,34 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="769"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="ShopTableViewCell" rowHeight="88" id="Jb1-is-Iu3" customClass="ShopTableViewCell" customModule="RxStudy" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="ShopTableViewCell" textLabel="Uua-77-AcY" detailTextLabel="UeV-Rd-DxC" rowHeight="88" style="IBUITableViewCellStyleSubtitle" id="Jb1-is-Iu3" customClass="ShopTableViewCell" customModule="RxStudy" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="88"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Jb1-is-Iu3" id="R3X-we-FCY">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="88"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qDz-tX-ULq">
-                                                    <rect key="frame" x="20" y="20" width="374" height="48"/>
-                                                </imageView>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Uua-77-AcY">
+                                                    <rect key="frame" x="20" y="24" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="UeV-Rd-DxC">
+                                                    <rect key="frame" x="20" y="47.5" width="33" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="qDz-tX-ULq" secondAttribute="bottom" constant="20" symbolic="YES" id="5zh-Pk-8iD"/>
-                                                <constraint firstItem="qDz-tX-ULq" firstAttribute="top" secondItem="R3X-we-FCY" secondAttribute="top" constant="20" symbolic="YES" id="By1-j6-Q7g"/>
-                                                <constraint firstItem="qDz-tX-ULq" firstAttribute="leading" secondItem="R3X-we-FCY" secondAttribute="leading" constant="20" symbolic="YES" id="S5E-Va-NfZ"/>
-                                                <constraint firstAttribute="trailing" secondItem="qDz-tX-ULq" secondAttribute="trailing" constant="20" symbolic="YES" id="rqL-CT-tNj"/>
-                                            </constraints>
                                         </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="productImageView" destination="qDz-tX-ULq" id="ICU-sb-0lD"/>
-                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="delegate" destination="TRZ-Y5-Lo5" id="ry1-6P-caW"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -58,11 +63,28 @@
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="tableView" destination="j7E-CG-yZy" id="yMj-Pu-Qpq"/>
+                        <segue destination="V5d-cL-hru" kind="show" identifier="shopDetailPage" id="Akk-Xi-UTs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ccG-4r-49h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="408.69565217391306" y="-457.36607142857139"/>
+        </scene>
+        <!--Shop Detail View Controller-->
+        <scene sceneID="EJe-T2-TdM">
+            <objects>
+                <viewController id="V5d-cL-hru" customClass="ShopDetailViewController" customModule="RxStudy" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kY0-lc-Bx7">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="uKx-6F-cqw"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Mbu-dl-SUG"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xxT-Ob-DZg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1306" y="-456"/>
         </scene>
     </scenes>
     <resources>
